fix(collapse): Change padding with default variable on collapse (#65) (#66)
* feat(component):Add accordion (#55)

feat(components): Add component Accordion

feat(accordion): Generate accordion and collapse components

feat(ago-collapse): Add component with animation in styleguide

fix(hygen): Fix first describe in generate test with component name

feat(go-collapse): Add unit test

feat(go-accordion): Add component, list of go-collapse

fix(test): Add plugin transform spread operator on babel config jest

fix(hygen): Correct import when generate unit test

fix(config): Add config babel to use import and commonjs on jest test

test(import): Change way to import components and global package

test(go-collapse): Change test and add missing test

feat(go-icon): Add component go-icon

fix(style): Add reset style to component

fix(style): Add missing style on go-collapse

build(rollup): Add alias and change style location

build(package.json): Add module property for common js build

* fix(package.json): Change location github (#57)

* ci(travis): Remove travais configuration file

* fix(es6): Change spread operator in data to object assign (#61)

* build(babel): Add babel on build to transpile es6 in es5 (#63)

* fix(collapse): Change padding with default variable on collapse (#65)

--- a/src/styles/components/_go-collapse.scss
+++ b/src/styles/components/_go-collapse.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
-    padding: 8px;
+    padding: $padding-collapse;
   }
 
   .go-header__title {
